# robot_copp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude/: SESSION_HANDOFF.md
claude-record/: SESSION_HANDOFF.md
configs/: comm_paras.yaml  robot_3axis.yaml  robot_ur5.yaml
copp/: __init__.py  config.py  constraints.py  flags.py  limits.py  viz.py
copp/backend/: __init__.py
copp/robot/: __init__.py  base.py  synthetic.py
copp/solve/: linearize.py  lp_problem.py  plp_objective.py  seed.py  splp.py  state.py
docs/: README_M1.md  README_M2.md  code_reading_guide.md  paper_notes.md  python_framework.md  robot_copp_design.md  tn_constraint_notes.md
robot/: __init__.py  base.py  sim3d.py  ur5.py
tests/: limits_config.py  test_splp_kernel.py
trajectory-planning/copp/: __init__.py  config.py  options.py  types.py  viz.py
trajectory-planning/copp/backend/: cvxpy_backend.py
trajectory-planning/copp/constraints/: __init__.py  ingest.py  model.py
trajectory-planning/copp/self-test/: limits_config.py  test_copp.py  test_splp_kernel.py
trajectory-planning/copp/solve/: __init__.py  interp.py  lp_problem.py  seed.py  splp.py  state.py
trajectory-planning/path/: __init__.py  errors.py  types.py
trajectory-planning/path/blending/: __init__.py
trajectory-planning/path/commands/: __init__.py  assemble.py  base.py  circular_move.py  joint_move.py  linear_move.py
trajectory-planning/path/lowering/: __init__.py  derivatives.py  ik.py  sampling.py  singularity.py
trajectory-planning/path/self-test/: test_commands.py  test_lowering.py
trajectory-planning/planner/: __init__.py  planner.py
trajectory-planning/planner/hlaw/: __init__.py
trajectory-planning/planner/self-test/: test_planner.py
trajectory-planning/planner/synth/: __init__.py  resample.py  verify.py
